[package]
name = "posting-import"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Ramos <rr.jonathan@outlook.com>"]
description = "Import API collections from Postman, Insomnia, and Bruno to Posting TUI format"
license = "GPL-3.0-only"
repository = "https://github.com/jonaramos/posting-import"
keywords = ["api", "http", "postman", "insomnia", "bruno", "posting", "import"]
categories = ["command-line-utilities", "web-programming"]
rust-version = "1.85"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
walkdir = "2.5"
dirs = "5.0"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.10"
assert_fs = "1.1"
predicates = "3.1"
insta = { version = "1.40", features = ["yaml"] }
test-case = "3.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
